--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,99 @@
-body {
+:root {
+    --oranzine: #ff4622;
+    --plotis: --1000px;
+    --soninis-atstumas:calc((100% - var(--plotis)) / 2);
+    --main-width: calc(100% - var(--soninis-atstumas));
+    --text-width: calc(var(--plotis) * 0.4);
+    --text-margin: calc(var(--plotis) * 0.1);
+    --image-width: calc(cal(100% - var(--plotis) / 2 ));    
 }
-header{
+body {
+    font-family: cursive
 }
 
-nav
+header {
+    display: inline-block;
+    width: var(--plotis);
+    margin-left: var(--soninis-atstumas);
+}
+
+header > img {
+    float: left;
+    height: 40px;
+}
+
+nav {
+    float: right;
+    margin-top: 20px;
+}
+
+nav > a {
+    font-size: 18px;
+    line-height: 20px;
+    text-decoration: none;
+    color: #2c253e;
+    margin-left: 20px;
+    border-bottom: 3px solid transparent;
+}
 
 nav > a:hover {
+    border-color: #ff4622;
 }
 
 nav > a:first-child {
+    margin-left: 0;
+    border-color: blue;
 }
+
 main {
+    display: inline-block;
+    width: var(--main-width);
+    margin-left: var(--soninis-atstumas);
+    margin-top: 60px;
 }
 
 div {
+    float: left;
+    text-align: left;
+    margin-top: 10%;
+    width: var(--text-width);
+    margin-right: var(--text-margin);
 }
 
 h1 {
+    display: inline-block;
+    width: 35%;
+    font-size: 45px;
+    margin: 0;
 }
 
 h1 > span {
+    color: var(--oranzine);
+}
+
+p {
+    width: 36%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 div > a {
+    padding: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-top: 25px;
+    color: #fff;
+    text-decoration: none;
+    background-color: var(--oranzine);
+    border-radius: 4px;
 }
+div > a:hover {
+    color: #fff;
+    background-color: var(--oranzine);
+} 
 
 main > img {
+    float: right;
+    width: var(--image-width);
+    margin-left: 50px;
+    margin-top: 10px;
 }
